@@ -1,10 +1,10 @@
-/* Generated by re2c 0.13.5 on Tue May  5 09:42:15 2009 */
+/* Generated by re2c 0.13.5 on Sun Mar  7 14:12:01 2010 */
 #line 1 "ext/date/lib/parse_iso_intervals.re"
 /*
    +----------------------------------------------------------------------+
    | PHP Version 5                                                        |
    +----------------------------------------------------------------------+
-   | Copyright (c) 1997-2006 The PHP Group                                |
+   | Copyright (c) 1997-2010 The PHP Group                                |
    +----------------------------------------------------------------------+
    | This source file is subject to version 3.01 of the PHP license,      |
    | that is bundled with this package in the file LICENSE, and is        |
@@ -1118,6 +1118,7 @@ void timelib_strtointerval(char *s, int len,
 	in.period->weekday = 0;
 	in.period->weekday_behavior = 0;
 	in.period->first_last_day_of = 0;
+	in.period->days = TIMELIB_UNSET;
 
 	in.recurrences = 1;
 
